<resources>
    <string name="app_name">AndroidFrame</string>
    <string name="first">主页</string>
    <string name="second">喜好</string>
    <string name="third">位置</string>
    <string name="four">视频</string>
    <string name="five">音乐</string>
    <string name="enter_phone_num">输入手机号</string>
    <string name="enter_pass">输入密码</string>
    <string name="forget_pass">忘记密码</string>
    <string name="sign_up">登录</string>
    <string name="log_in">登录</string>
    <string name="loading">loading…</string>
</resources>
